samples/_failures_safe/1761195332_6a224c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64e7489c.c: In function ‘bfs’:
./samples/SAFE/__tmp_64e7489c.c:167:12: error: expected expression at end of input
  167 |     struct Queue* queue =
      |            ^~~~~
./samples/SAFE/__tmp_64e7489c.c:167:12: error: expected declaration or statement at end of input
